# thesis-software-suite

./: .gitignore  README.md  UMLDiag.xmi  contributors.txt
algorithms/: .gitignore  CMakeLists.txt  README.md
algorithms/clustering/: CMakeLists.txt  clusteringbase.cpp  clusteringbase.h  colorwheel.h  tableclustering.cpp  tableclustering.h  utility.cpp  utility.h
algorithms/clustering/basicdm/: CMakeLists.txt  generalkmeans.cpp  generalkmeans.h
algorithms/clustering/centrality/: CMakeLists.txt  centralitybased.cpp  centralitybased.h  pagerank.cpp  pagerank.h
algorithms/clustering/contingencyclust/: CMakeLists.txt  CommunityAlgorithm.cpp  CommunityAlgorithm.h  main.cpp
algorithms/clustering/galoisclust/: CMakeLists.txt  basicgaloisclustering.cpp  basicgaloisclustering.h  clusteringexperiment.cpp  clusteringexperiment.h  main.cpp  preclustered_experiment.cpp  preclustered_experiment.h  util.cpp  util.h
algorithms/clustering/louvain/: CMakeLists.txt  CommunitySpace.cpp  CommunitySpace.h  louvain.cpp  louvain.h
algorithms/clustering/mixed/: CMakeLists.txt  kohonenmap.cpp  kohonenmap.h  povclustering.cpp  povclustering.h  somclusteringspace.cpp  somclusteringspace.h  somnode.cpp  somnode.h
algorithms/import/: CMakeLists.txt  importbase.cpp  importbase.h
algorithms/measures/: CMakeLists.txt  basicentropy.cpp  basicentropy.h  basicoperations.cpp  basicoperations.h  distances.cpp  distances.h  partitionsimilarity.cpp  partitionsimilarity.h
base/: README.md
base/galois-lattices/: CMakeLists.txt  README.md  concept.cpp  concept.h  conceptmatrix.cpp  conceptmatrix.h  galoislattice.cpp  galoislattice.h  generalinc.h  importmatrix.cpp  importmatrix.h  latticeexporter.cpp  latticeexporter.h  lightdlinkdlist.cpp  lightdlinkdlist.h  main.cpp  trie.cpp  trie.h
base/galois-lattices/tests/: bigtest01.txt  bigtest02.txt  bigtest05.txt  minitest1.txt  minitest1_out.txt  minitest2.txt  minitest2_out.txt  minitest3.txt  minitest3_out.txt  minitest_ex.txt  minitest_ex_out.txt
base/matrix-lib/: CMakeLists.txt  README.md  contributors.txt  mat_test.cpp
base/matrix-lib/src/: CMakeLists.txt  matrix.cpp  matrix.h
base/mds-smacof/: .gitignore  CMakeLists.txt  README.md  data.txt  mds_test.cpp
base/mds-smacof/src/: CMakeLists.txt  distance.h  distance_chebyshev.h  distance_euclidean.h  distance_factory.cpp  distance_factory.h  distance_manhattan.h  multidimscaling.cpp  multidimscaling.h  util.cpp  util.h
community-analysis/: CMakeLists.txt  README.md  clusteringexperiment.cpp  clusteringexperiment.h  experiment.cpp  experiment.h  main.cpp  test_experiment.cpp
community-analysis/tests/: clustered_graph_readme.tlp  dblp_10000.tlp  dblp_composition.txt  dblp_composition_2.txt  fb_composition.txt  personalNetwork.tlp  stats_readme.txt
pov-plugins/: CMakeLists.txt  README.md
pov-plugins/clustering/: CMakeLists.txt
pov-plugins/clustering/louvain/: CMakeLists.txt  FastUnfoldingPlugin.cpp  FastUnfoldingPlugin.h
pov-plugins/clustering/mixed/: CMakeLists.txt  SOMClusteringPlugin.cpp  SOMClusteringPlugin.h
pov-plugins/importers/: CMakeLists.txt
pov-plugins/importers/dimacs-importer/: CMakeLists.txt
pov-plugins/importers/dimacs-importer/src/: CDimacsLoader.cpp  CDimacsLoader.h  CMakeLists.txt  DimacsLoaderPlugin.cpp  DimacsLoaderPlugin.h
pov-plugins/layout/: CMakeLists.txt
pov-plugins/layout/community-color/: CMakeLists.txt  CommunityColoringLayoutPlugin.cpp  CommunityColoringLayoutPlugin.h  colors.h
pov-plugins/layout/pov-layout/: CLayoutSpace.cpp  CLayoutSpace.h  CMakeLists.txt  ExecutionLog.cpp  ExecutionLog.h  PoVLayoutClassic.kdev4  PoVLayoutTulipPlugin.cpp  definitions.h  galgorithms.h  main.cpp
pov-plugins/pov-view/: CMakeLists.txt
pov-plugins/pov-view/include/: Controller.h  GeneralPoVInfoContainer.h  MainWidgetView.h  Model.h  PoVConfigurationView.h  PoVGraphObserver.h  PoVLayoutDistortion.h  PoVViewPlugin.h  Role.h  SemanticPatternLoader.h  information_definitions.h  ui_MainWidgetView.h  ui_PatternLoadWindow.h
pov-plugins/pov-view/interactors/: CMakeLists.txt
pov-plugins/pov-view/interactors/transitionlayout/: CMakeLists.txt
pov-plugins/pov-view/interactors/transitionlayout/include/: CMakeLists.txt  layouttransitionplugin.h
pov-plugins/pov-view/interactors/transitionlayout/src/: CMakeLists.txt  layouttransitionplugin.cpp
pov-plugins/pov-view/src/: CMakeLists.txt  Controller.cpp  GeneralPoVInfoContainer.cpp  MainWidgetView.cpp  MainWidgetView.ui  Model.cpp  PatternLoadWindow.ui  PoVConfigurationView.cpp  PoVGraphObserver.cpp  PoVLayoutDistortion.cpp  PoVViewPlugin.cpp  SemanticPatternLoader.cpp
pov-plugins/pov-view/src/res/: main_widget_res.qrc
pov-plugins/roles/: CMakeLists.txt
