#import subdirectory

#SET( LibName tableimport )

SET( CPP_FILES importbase.cpp )

SET(${TAB_IMPORT_LIB_NAME}_DEFINITIONS ${C_DEFINITIONS}
    CACHE INTERNAL "${TAB_IMPORT_LIB_NAME}: Definitions" FORCE)

ADD_LIBRARY(${TAB_IMPORT_LIB_NAME} SHARED ${CPP_FILES} )
INSTALL( TARGETS ${TAB_IMPORT_LIB_NAME}
            EXPORT ${TAB_IMPORT_LIB_NAME}
            LIBRARY DESTINATION ${INSTALL_LIB_PATH} 
            RUNTIME DESTINATION ${INSTALL_LIB_PATH}
            ARCHIVE DESTINATION ${INSTALL_LIB_PATH})
INSTALL( FILES importbase.h DESTINATION ${INSTALL_INCLUDE_PATH} )

