#Benchmarking

SET(SRCS distances.cpp
        basicentropy.cpp
        partitionsimilarity.cpp
        basicoperations.cpp)
  
SET( CPP_FILES ${SRCS} )

ADD_LIBRARY(${MEASURES_LIB_NAME} SHARED ${CPP_FILES} )

INSTALL( TARGETS ${MEASURES_LIB_NAME} 
            LIBRARY DESTINATION ${INSTALL_LIB_PATH} 
            RUNTIME DESTINATION ${INSTALL_LIB_PATH}
            ARCHIVE DESTINATION ${INSTALL_LIB_PATH} )

INSTALL( FILES distances.h DESTINATION ${INSTALL_INCLUDE_PATH} )
INSTALL( FILES basicentropy.h DESTINATION ${INSTALL_INCLUDE_PATH} )
INSTALL( FILES partitionsimilarity.h DESTINATION ${INSTALL_INCLUDE_PATH} )
INSTALL( FILES basicoperations.h DESTINATION ${INSTALL_INCLUDE_PATH} )
